--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ env_logger = "0.11.8"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34-deprecated"
 humantime = "2.3.0"
-strum_macros = "0.27.2"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 actix-web = "4.11.0"
-sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
+sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
+thiserror = "2.0.16"
