--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,6 @@ sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-actix-rust
 thiserror = "2.0.16"
 bytesize = { version = "2.1.0", features = ["serde"] }
 regex = "1.11.2"
-serde_json = "1.0.143"
 tempfile = "3.22.0"
-uuid = { version = "1.18.1", features = ["v4"] }
-time = "0.3.43"
 idworker = "0.3.0"
+once_cell = "1.21.3"
