+ db通过配置文件的配置进行初始化

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,13 @@ authors = ["zbz"]
 log = "0.4.28"
 clap = { version = "4.5.47", features = ["derive"] }
 chrono = "0.4.42"
-env_logger = "0.11.8"
 serde = { version = "1.0.224", features = ["derive"] }
 serde_yaml = "0.9.34-deprecated"
 humantime = "2.3.0"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 actix-web = "4.11.0"
 actix-multipart = "0.7.2"
-sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-actix-rustls"] }
+sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-actix-rustls", "debug-print"] }
 thiserror = "2.0.16"
 bytesize = { version = "2.1.0", features = ["serde"] }
 regex = "1.11.2"
@@ -23,3 +22,4 @@ tempfile = "3.22.0"
 idworker = "0.3.0"
 once_cell = "1.21.3"
 sha2 = "0.10.9"
+tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
