--- a/oss-rs.yml
+++ b/oss-rs.yml
@@ -1,6 +1,8 @@
 oss:
   upload-buffer-size: 2MiB
   download-buffer-size: 2MiB
+db:
+  url: postgres://oss:oss@127.0.0.1/oss
 id-worker:
   epoch: 1758108749211
   machine-id: 1
