--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.47", features = ["derive"] }
 chrono = "0.4.42"
 serde = { version = "1.0.224", features = ["derive"] }
 serde_yaml = "0.9.34-deprecated"
+serde_with = "3.14.1"
 humantime = "2.3.0"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 actix-web = "4.11.0"
@@ -22,4 +23,5 @@ tempfile = "3.22.0"
 idworker = "0.3.0"
 once_cell = "1.21.3"
 sha2 = "0.10.9"
-tracing-subscriber = { version = "0.3.20", features = ["local-time"] }
+tracing-subscriber = "0.3.20"
+o2o = "0.5.4"
