--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,7 @@ tempfile = "3.22.0"
 idworker = "0.3.0"
 once_cell = "1.21.3"
 sha2 = "0.10.9"
-tracing-subscriber = "0.3.20"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
+tracing-appender = "0.2.3"
 o2o = "0.5.4"
+tracing = "0.1.41"
