--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,5 @@ tracing-appender = "0.2.3"
 o2o = "0.5.4"
 tracing = "0.1.41"
 tracing-core = "0.1.34"
-colored = "3.0.0"
 tracing-log = "0.2.0"
+sqlx = "0.8.6"
