--- a/oss-rs.yml
+++ b/oss-rs.yml
@@ -2,7 +2,7 @@ oss:
   upload-buffer-size: 2MiB
   download-buffer-size: 2MiB
 db:
-  url: postgres://oss:oss@127.0.0.1/oss
+  url: postgres://ossrs:ossrs@127.0.0.1/ossrs
 id-worker:
   epoch: 1758108749211
   machine-id: 1
