--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ log = "0.4.28"
 clap = { version = "4.5.47", features = ["derive"] }
 chrono = "0.4.42"
 serde = { version = "1.0.224", features = ["derive"] }
-serde_yaml = "0.9.34-deprecated"
 serde_with = "3.14.1"
 humantime = "2.3.0"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
@@ -30,3 +29,4 @@ tracing = "0.1.41"
 tracing-core = "0.1.34"
 tracing-log = "0.2.0"
 sqlx = "0.8.6"
+config = "0.15.17"
