--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,4 @@ tracing-core = "0.1.34"
 tracing-log = "0.2.0"
 sqlx = "0.8.6"
 config = "0.15.17"
+validator = { version = "0.19.0", features = ["derive"] }
