--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,16 +18,16 @@ sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-actix-rust
 thiserror = "2.0.16"
 bytesize = { version = "2.1.0", features = ["serde"] }
 regex = "1.11.2"
-tempfile = "3.22.0"
+tempfile = "3.23.0"
 idworker = "0.3.0"
 once_cell = "1.21.3"
 sha2 = "0.10.9"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "chrono", "tracing-log"] }
 tracing-appender = "0.2.3"
-o2o = "0.5.4"
+o2o = { version = "0.5.4", default-features = false, features = ["syn2"] }
 tracing = "0.1.41"
 tracing-core = "0.1.34"
 tracing-log = "0.2.0"
 sqlx = "0.8.6"
 config = "0.15.17"
-validator = { version = "0.19.0", features = ["derive"] }
+validator = { version = "0.20.0", features = ["derive"] }
