--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ clap = { version = "4.5.47", features = ["derive"] }
 chrono = "0.4.42"
 serde = { version = "1.0.224", features = ["derive"] }
 serde_with = "3.14.1"
+erased-serde = "0.4.8"
 humantime = "2.3.0"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 actix-web = "4.11.0"
@@ -31,3 +32,4 @@ tracing-log = "0.2.0"
 sqlx = "0.8.6"
 config = "0.15.17"
 validator = { version = "0.20.0", features = ["derive"] }
+strum = { version = "0.27.2", features = ["derive"] }
