--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ clap = { version = "4.5.47", features = ["derive"] }
 chrono = "0.4.42"
 serde = { version = "1.0.224", features = ["derive"] }
 serde_with = "3.14.1"
-erased-serde = "0.4.8"
 humantime = "2.3.0"
 tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 actix-web = "4.11.0"
@@ -33,3 +32,6 @@ sqlx = "0.8.6"
 config = "0.15.17"
 validator = { version = "0.20.0", features = ["derive"] }
 strum = { version = "0.27.2", features = ["derive"] }
+utoipa = { version = "5.4.0", features = ["actix_extras"] }
+utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
+
