--- a/oss-svr/Cargo.toml
+++ b/oss-svr/Cargo.toml
@@ -10,7 +10,6 @@ clap = { workspace = true }
 chrono = { workspace = true }
 serde = { workspace = true }
 serde_with = { workspace = true }
-humantime = { workspace = true }
 tokio = { workspace = true }
 actix-web = { workspace = true }
 actix-multipart = { workspace = true }
@@ -20,7 +19,6 @@ regex = { workspace = true }
 tempfile = { workspace = true }
 idworker = { workspace = true }
 once_cell = { workspace = true }
-sha2 = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-appender = { workspace = true }
 o2o = { workspace = true }
@@ -33,5 +31,6 @@ validator = { workspace = true }
 strum = { workspace = true }
 utoipa = { workspace = true }
 utoipa-swagger-ui = { workspace = true }
+wheel-rs = { workspace = true }
 robotech-api = { workspace = true }
 robotech-svr = { workspace = true }
