--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,30 @@ resolver = "3"
 
 [workspace.dependencies]
 log = "0.4.28"
-clap = { version = "4.5.53", features = ["derive"] }
+clap = "4.5.53"
 chrono = "0.4.42"
-serde = { version = "1.0.228", features = ["derive"] }
+serde = "1.0.228"
 serde_with = "3.16.0"
-tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
+serde_json = "1.0.145"
+reqwest = "0.12.24"
+tokio = "1.48.0"
 actix-web = "4.12.0"
 actix-multipart = "0.7.2"
-sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-actix-rustls", "debug-print"] }
-sqlx = { version = "0.8.6", features = ["any", "postgres"] }
-bytesize = { version = "2.3.0", features = ["serde"] }
+sea-orm = "1.1.19"
+sqlx = "0.8.6"
+bytesize = "2.3.1"
 regex = "1.12.2"
 tempfile = "3.23.0"
 once_cell = "1.21.3"
-o2o = { version = "0.5.4", default-features = false, features = ["syn2"] }
-validator = { version = "0.20.0", features = ["derive"] }
-strum = { version = "0.27.2", features = ["derive"] }
-utoipa = { version = "5.4.0", features = ["actix_extras"] }
-utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
+o2o = "0.5.4"
+validator = "0.20.0"
+strum = "0.27.2"
+utoipa = "5.4.0"
+utoipa-swagger-ui = "9.0.2"
 idworker = "0.3.5"
 wheel-rs = "0.3.0"
-robotech = { version = "0.9.9", features = ["web"] }
+robotech = "0.10.0"
 
 [patch.crates-io]
 wheel-rs = { path = "../wheel-rs" }
-robotech = { path = "../robotech-rs"}
+robotech = { path = "../robotech-rs" }
