--- a/oss-api/Cargo.toml
+++ b/oss-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oss-api"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2024"
 authors = ["zbz"]
 license = "MIT"
@@ -12,10 +12,10 @@ repository = "https://github.com/rusthing/oss-rs"
 readme = "README.md"
 
 [dependencies]
+log = { workspace = true }
 reqwest = { workspace = true, features = ["multipart", "json", "stream"] }
 serde = { workspace = true, features = ["derive"] }
 serde_with = { workspace = true }
 serde_json = { workspace = true }
 utoipa = { workspace = true, features = ["actix_extras"] }
 robotech = { workspace = true, features = ["api"] }
-log = "0.4.28"
