--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ chrono = "0.4.42"
 serde = "1.0.228"
 serde_with = "3.16.1"
 serde_json = "1.0.145"
-reqwest = "0.12.25"
+reqwest = "0.12.26"
 tokio = "1.48.0"
 actix-web = "4.12.1"
 actix-multipart = "0.7.2"
@@ -24,9 +24,11 @@ validator = "0.20.0"
 strum = "0.27.2"
 utoipa = "5.4.0"
 utoipa-swagger-ui = "9.0.2"
+# cross打包时用，需要开启vendored feature
+openssl = { version = "0.10.75" }
 idworker = "0.3.5"
 wheel-rs = "1.0.0"
-robotech = "1.0.0"
+robotech = "1.0.1"
 
 [patch.crates-io]
 wheel-rs = { path = "../wheel-rs" }
