--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,10 @@ strum = "0.27.2"
 utoipa = "5.4.0"
 utoipa-swagger-ui = "9.0.2"
 # cross打包时用，需要开启vendored feature
-openssl = { version = "0.10.75" }
+openssl = "0.10.75"
 idworker = "0.3.5"
-wheel-rs = "1.0.1"
-robotech = "1.0.3"
+wheel-rs = "1.1.0"
+robotech = "1.0.4"
 
 [patch.crates-io]
 wheel-rs = { path = "../wheel-rs" }
