--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["oss-api", "oss-svr"]
+members = ["oss-api-client", "oss-svr"]
 resolver = "3"
 
 [workspace.dependencies]
@@ -8,7 +8,7 @@ clap = "4.5.54"
 chrono = "0.4.42"
 serde = "1.0.228"
 serde_with = "3.16.1"
-serde_json = "1.0.148"
+serde_json = "1.0.149"
 reqwest = "0.13.1"
 tokio = "1.49.0"
 actix-web = "4.12.1"
@@ -26,10 +26,11 @@ utoipa = "5.4.0"
 utoipa-swagger-ui = "9.0.2"
 # cross打包时用，需要开启vendored feature
 openssl = "0.10.75"
-idworker = "0.3.5"
+idworker = "1.0.0"
 wheel-rs = "1.1.1"
-robotech = "1.0.5"
+robotech = "1.3.0"
 
 [patch.crates-io]
+idworker = { path = "../idworker" }
 wheel-rs = { path = "../wheel-rs" }
 robotech = { path = "../robotech-rs" }
