--- a/oss-api-client/Cargo.toml
+++ b/oss-api-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "oss-api"
-version = "1.1.1"
+name = "oss-api-client"
+version = "1.1.3"
 edition = "2024"
 authors = ["zbz"]
 license = "MIT"
@@ -18,4 +18,4 @@ serde = { workspace = true, features = ["derive"] }
 serde_with = { workspace = true }
 serde_json = { workspace = true }
 utoipa = { workspace = true, features = ["actix_extras"] }
-robotech = { workspace = true, features = ["api"] }
+robotech = { workspace = true, features = ["api-client"] }
