--- a/oss-svr/Cargo.toml
+++ b/oss-svr/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "oss-svr"
-version = "1.1.1"
+version = "1.1.3"
 edition = "2024"
 authors = ["zbz"]
 license = "MIT"
@@ -33,6 +33,6 @@ utoipa = { workspace = true, features = ["actix_extras"] }
 utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
 # cross打包时用，需要开启vendored feature
 openssl = { workspace = true, features = ["vendored"] }
-idworker = { workspace = true, features = ["settings"] }
+idworker = { workspace = true, features = ["config"] }
 wheel-rs = { workspace = true }
 robotech = { workspace = true, features = ["web", "crud"] }
